.kubernetes/app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastify-sample
  namespace: apps
  labels:
    app: fastify-sample
spec:
  replicas: 5
  selector:
    matchLabels:
      app: fastify-sample
  template:
    metadata:
      labels:
        app: fastify-sample
    spec:
      containers:
        - name: fastify
          image: julianlouis/fastify-sample:latest
          ports:
            - name: web
              containerPort: 3000
