.kubernetes/app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: fastify-sample
  namespace: apps
  labels:
    app: fastify-sample
spec:
  ports:
    - protocol: TCP
      name: web
      port: 3000
  selector:
    app: fastify-sample
