.kubernetes/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastify-sample
  namespace: apps
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: public
    kubernetes.io/tls-acme: "true"
  labels:
    app: fastify-sample
spec:
  rules:
    - host: fastify-sample.julianlouis.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastify-sample
                port:
                  name: web
  tls:
    - hosts:
        - fastify-sample.julianlouis.fr
      secretName: fastify-sample-secret # do not change, this is provided by Argo CD
